@@ -1,8 +1,8 @@
 relay-ctrl
 SMTP Relaying Control for qmail & tcpserver
 Bruce Guenter <bruceg@em.ca>
-Version 1.3
-February 3, 2000
+Version 1.4
+March 15, 2000
 
 This pair of programs controls access to relaying for users that
 authenticate using checkpassword.  At this time, this means POP3 using
